--- a/p8105_hw3_rk3445.Rmd
+++ b/p8105_hw3_rk3445.Rmd
@@ -324,10 +324,13 @@ covar =
   )
 ```
 
-merged dataset ; 
+**Produce a reader-friendly table for the number of men and women in each education category**
+
 ```{r}
 final_merged = 
-  left_join(covar, accel, by = "seqn") |> 
+  left_join(covar, accel, by = "seqn") 
+
+final_merged |> 
   group_by(education, sex) |> 
   summarize(
     n_count = n(), 
@@ -336,10 +339,59 @@ final_merged =
   knitr::kable() 
 ```
 
+**create a visualization of the age distributions for men and women in each education category.**
 
-Produce a reader-friendly table for the number of men and women in each education category, and create a visualization of the age distributions for men and women in each education category. Comment on these items.
+```{r}
+final_merged |> 
+  ggplot(aes(x = education, y = age, fill = sex)) +
+  geom_violin(trim = FALSE, alpha = .5) +
+  labs(
+    title = "Age Distributions by Education and Sex",
+    x = "Education Level",
+    y = "Age",
+    fill = "Sex"
+  ) +
+  theme_minimal()
+```
 
-Traditional analyses of accelerometer data focus on the total activity over the day. Using your tidied dataset, aggregate across minutes to create a total activity variable for each participant. Plot these total activities (y-axis) against age (x-axis); your plot should compare men to women and have separate panels for each education level. Include a trend line or a smooth to illustrate differences. Comment on your plot.
+From the summarized table of the number of men and women in each education category, both sex with more than high school education represent the largest proportion of participants compared to the other education levels. The violin plot shows that individuals with more than high school education are concentrated in their 30s, while those with less than high school and high school equivalent education level groups show a broader and older age distribution. This demonstrates that higher education levels are common among young adults while old people are likely to have lower education level. 
 
-Accelerometer data allows the inspection activity over the course of the day. Make a three-panel plot that shows the 24-hour activity time courses for each education level and use color to indicate sex. Describe in words any patterns or conclusions you can make based on this graph; including smooth trends may help identify differences.
+
+
+
+**Using your tidied dataset, aggregate across minutes to create a total activity variable for each participant.**
+
+```{r}
+total = 
+  final_merged |> 
+  mutate(
+    total_activity = rowSums(select(final_merged, starts_with("min")), na.rm = TRUE))
+```
+
+
+
+**Plot these total activities (y-axis) against age (x-axis); your plot should compare men to women and have separate panels for each education level. Include a trend line or a smooth to illustrate differences.**
+
+```{r}
+total |> 
+  ggplot(aes(x = age, y = total_activity, color = sex)) +
+  geom_point(alpha = 0.5) +
+  geom_smooth(method = 'loess', se = FALSE) +
+  facet_grid(. ~ education) +
+  labs(
+    title = "Total Activity vs. Age by Education and Sex",
+    x = "Age",
+    y = "Total Activity (sum across minutes)",
+    color = "Sex"
+  ) +
+  theme_minimal()
+```
+
+The plot illustrates the relationship between total activity and age, separated by sex and education level. There is a declining trend in total activity with increasing age, showing that older people tend to be less total activity than younger ones. The trend lines show peaks in activity during ages 30-40, followed by a steady decline afterward. Especially, participants with less than high school education level exhibit the steepest decline showing the largest difference between age groups. Women tend to have higher activity levels than man in the younger to middle-aged groups. Only in less than high school group, men surpass women in activity level after their 40s. Overall, both age and education level are important factors influencing activity levels. 
+
+
+**Accelerometer data allows the inspection activity over the course of the day. Make a three-panel plot that shows the 24-hour activity time courses for each education level and use color to indicate sex. Describe in words any patterns or conclusions you can make based on this graph; including smooth trends may help identify differences.**
+
+
+
 
