--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -935,3 +935,16 @@ the day. Make a three-panel plot that shows the 24-hour activity time
 courses for each education level and use color to indicate sex. Describe
 in words any patterns or conclusions you can make based on this graph;
 including smooth trends may help identify differences.**
+
+``` r
+merged = 
+final_merged |> 
+  pivot_longer(
+    cols = min1:min1440,
+    names_to = "time",
+    values_to = "activity"
+  ) |> 
+  ggplot(aes(x = time, y = activity, color = sex)) +
+  geom_smooth(method = 'loess', se = FALSE) +
+  facet_grid(. ~ education) 
+```
