--- a/p8105_hw3_rk3445.md
+++ b/p8105_hw3_rk3445.md
@@ -265,7 +265,18 @@ each month?**
 consider the all the zipcodes instead of using only zillow dataset?)…!
 
 ``` r
-zip_counts = 
+zipcode_all = 
+  zillow_nyc |> 
+  drop_na(zori) |> 
+  group_by(zip_code) |> 
+  summarize(
+    n_month = n()
+  ) |> 
+  filter(n_month == 116)
+```
+
+``` r
+zipcode_10counts = 
   zillow_nyc |> 
   drop_na(zori) |> 
   group_by(zip_code) |> 
@@ -275,12 +286,13 @@ zip_counts =
   filter(n_month < 10)
 ```
 
-26 zipcodes are observed fewer than 10 times from January 2015 to August
-2024. These zipcodes are rarely observed likely due to limited data or
-missing/incomplete data. For example, some ZIP codes have more housing
-units tracked by Zillow, others fewer. ZIP codes with very few units or
-newly created ZIP codes may appear only rarely. Additionally, reporting
-gaps can cause a month of data for certain ZIP codes to be missing.
+48 zipcodes are observed 116 times and 26 zipcodes are observed fewer
+than 10 times from January 2015 to August 2024. These zipcodes are
+rarely observed likely due to limited data or missing/incomplete data.
+For example, some ZIP codes have more housing units tracked by Zillow,
+others fewer. ZIP codes with very few units or newly created ZIP codes
+may appear only rarely. Additionally, reporting gaps can cause a month
+of data for certain ZIP codes to be missing.
 
 **Create a table showing the average rental price in each borough and
 year (not month). Comment on trends in this table.**
@@ -371,40 +383,38 @@ boroughs. Comment on any significant elements of this plot.**
 rental_allyear = 
   zillow_nyc |> 
   mutate(year = as.integer(str_sub(date, 1, 4)))  |> 
+  filter(!is.na(zori)) |>  
   group_by(zip_code, county_name, year) |> 
   summarize(avg_zori = mean(zori, na.rm = TRUE), .groups = "drop") |> 
   ggplot(aes(x = year, y = avg_zori, group = zip_code, color = county_name)) +
-  geom_line(alpha = 0.15) +
-  stat_summary(
-    aes(group = county_name), fun = mean, geom = "line", size = 1.5, alpha = 0.9
-  ) +
+  geom_point() +
+  facet_grid(. ~ county_name) +
   labs(
     title = "Rental Price Trends Across Boroughs from 2015 to 2024",
-    subtitle = "Thin lines = individual ZIP codes, Thick lines = county-wide trend",
     x = "Year",
-    y = "ZORI (Rental Price Index)",
-    color = "County"
+    y = "ZORI (Rental Price Index)"
   ) + 
   scale_x_continuous(
     breaks = c(2015, 2017, 2019, 2021, 2023),
     labels = c("2015", "2017", "2019", "2021", "2023")
   ) +
   theme_minimal() +
-  theme(legend.position = "bottom") 
+  theme(
+    axis.text.x = element_text(angle = 90, hjust = 1),
+    legend.position = "bottom"
+  ) 
+
+rental_allyear
 ```
 
-    ## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
-    ## ℹ Please use `linewidth` instead.
-    ## This warning is displayed once every 8 hours.
-    ## Call `lifecycle::last_lifecycle_warnings()` to see where this warning was
-    ## generated.
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-15-1.png)<!-- -->
 
 This plot shows rental price trends in New York City across ZIP codes
 and counties from 2015 to 2024. Only Richmond county has a record from
 2020 to 2024. The Zillow Observed Rent Index (ZORI) has a steady upward
 trend, with a noticeable acceleration after 2021. The thin lines
 indicate individual ZIP codes, showing substantial within-county
-variation. New York county has the widest spread upuntil 8000 ZORI and
+variation. New York county has the widest spread up until 8000 ZORI and
 it stands out with the highest rent levels among five counties and the
 steepest increase from 2021 to 2022.
 
@@ -434,311 +444,21 @@ rental_2023 =
     x = "County",
     y = "Average ZORI (Rental Price Index)"
     
-  )
+  ) +
+  theme_minimal()
 ```
 
     ## `summarise()` has grouped output by 'zip_code'. You can override using the
     ## `.groups` argument.
 
 ``` r
-  theme_minimal() 
+rental_2023
 ```
 
-    ## List of 136
-    ##  $ line                            :List of 6
-    ##   ..$ colour       : chr "black"
-    ##   ..$ linewidth    : num 0.5
-    ##   ..$ linetype     : num 1
-    ##   ..$ lineend      : chr "butt"
-    ##   ..$ arrow        : logi FALSE
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_line" "element"
-    ##  $ rect                            :List of 5
-    ##   ..$ fill         : chr "white"
-    ##   ..$ colour       : chr "black"
-    ##   ..$ linewidth    : num 0.5
-    ##   ..$ linetype     : num 1
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_rect" "element"
-    ##  $ text                            :List of 11
-    ##   ..$ family       : chr ""
-    ##   ..$ face         : chr "plain"
-    ##   ..$ colour       : chr "black"
-    ##   ..$ size         : num 11
-    ##   ..$ hjust        : num 0.5
-    ##   ..$ vjust        : num 0.5
-    ##   ..$ angle        : num 0
-    ##   ..$ lineheight   : num 0.9
-    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : logi FALSE
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ title                           : NULL
-    ##  $ aspect.ratio                    : NULL
-    ##  $ axis.title                      : NULL
-    ##  $ axis.title.x                    :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 1
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 2.75points 0points 0points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.title.x.top                :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 0
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 2.75points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.title.x.bottom             : NULL
-    ##  $ axis.title.y                    :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 1
-    ##   ..$ angle        : num 90
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 2.75points 0points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.title.y.left               : NULL
-    ##  $ axis.title.y.right              :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 1
-    ##   ..$ angle        : num -90
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 2.75points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text                       :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : chr "grey30"
-    ##   ..$ size         : 'rel' num 0.8
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : NULL
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text.x                     :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 1
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 2.2points 0points 0points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text.x.top                 :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : num 0
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 2.2points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text.x.bottom              : NULL
-    ##  $ axis.text.y                     :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : num 1
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 2.2points 0points 0points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text.y.left                : NULL
-    ##  $ axis.text.y.right               :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : num 0
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 0points 0points 2.2points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.text.theta                 : NULL
-    ##  $ axis.text.r                     :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : num 0.5
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : 'margin' num [1:4] 0points 2.2points 0points 2.2points
-    ##   .. ..- attr(*, "unit")= int 8
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ axis.ticks                      : list()
-    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
-    ##  $ axis.ticks.x                    : NULL
-    ##  $ axis.ticks.x.top                : NULL
-    ##  $ axis.ticks.x.bottom             : NULL
-    ##  $ axis.ticks.y                    : NULL
-    ##  $ axis.ticks.y.left               : NULL
-    ##  $ axis.ticks.y.right              : NULL
-    ##  $ axis.ticks.theta                : NULL
-    ##  $ axis.ticks.r                    : NULL
-    ##  $ axis.minor.ticks.x.top          : NULL
-    ##  $ axis.minor.ticks.x.bottom       : NULL
-    ##  $ axis.minor.ticks.y.left         : NULL
-    ##  $ axis.minor.ticks.y.right        : NULL
-    ##  $ axis.minor.ticks.theta          : NULL
-    ##  $ axis.minor.ticks.r              : NULL
-    ##  $ axis.ticks.length               : 'simpleUnit' num 2.75points
-    ##   ..- attr(*, "unit")= int 8
-    ##  $ axis.ticks.length.x             : NULL
-    ##  $ axis.ticks.length.x.top         : NULL
-    ##  $ axis.ticks.length.x.bottom      : NULL
-    ##  $ axis.ticks.length.y             : NULL
-    ##  $ axis.ticks.length.y.left        : NULL
-    ##  $ axis.ticks.length.y.right       : NULL
-    ##  $ axis.ticks.length.theta         : NULL
-    ##  $ axis.ticks.length.r             : NULL
-    ##  $ axis.minor.ticks.length         : 'rel' num 0.75
-    ##  $ axis.minor.ticks.length.x       : NULL
-    ##  $ axis.minor.ticks.length.x.top   : NULL
-    ##  $ axis.minor.ticks.length.x.bottom: NULL
-    ##  $ axis.minor.ticks.length.y       : NULL
-    ##  $ axis.minor.ticks.length.y.left  : NULL
-    ##  $ axis.minor.ticks.length.y.right : NULL
-    ##  $ axis.minor.ticks.length.theta   : NULL
-    ##  $ axis.minor.ticks.length.r       : NULL
-    ##  $ axis.line                       : list()
-    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
-    ##  $ axis.line.x                     : NULL
-    ##  $ axis.line.x.top                 : NULL
-    ##  $ axis.line.x.bottom              : NULL
-    ##  $ axis.line.y                     : NULL
-    ##  $ axis.line.y.left                : NULL
-    ##  $ axis.line.y.right               : NULL
-    ##  $ axis.line.theta                 : NULL
-    ##  $ axis.line.r                     : NULL
-    ##  $ legend.background               : list()
-    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
-    ##  $ legend.margin                   : 'margin' num [1:4] 5.5points 5.5points 5.5points 5.5points
-    ##   ..- attr(*, "unit")= int 8
-    ##  $ legend.spacing                  : 'simpleUnit' num 11points
-    ##   ..- attr(*, "unit")= int 8
-    ##  $ legend.spacing.x                : NULL
-    ##  $ legend.spacing.y                : NULL
-    ##  $ legend.key                      : list()
-    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
-    ##  $ legend.key.size                 : 'simpleUnit' num 1.2lines
-    ##   ..- attr(*, "unit")= int 3
-    ##  $ legend.key.height               : NULL
-    ##  $ legend.key.width                : NULL
-    ##  $ legend.key.spacing              : 'simpleUnit' num 5.5points
-    ##   ..- attr(*, "unit")= int 8
-    ##  $ legend.key.spacing.x            : NULL
-    ##  $ legend.key.spacing.y            : NULL
-    ##  $ legend.frame                    : NULL
-    ##  $ legend.ticks                    : NULL
-    ##  $ legend.ticks.length             : 'rel' num 0.2
-    ##  $ legend.axis.line                : NULL
-    ##  $ legend.text                     :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : 'rel' num 0.8
-    ##   ..$ hjust        : NULL
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : NULL
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ legend.text.position            : NULL
-    ##  $ legend.title                    :List of 11
-    ##   ..$ family       : NULL
-    ##   ..$ face         : NULL
-    ##   ..$ colour       : NULL
-    ##   ..$ size         : NULL
-    ##   ..$ hjust        : num 0
-    ##   ..$ vjust        : NULL
-    ##   ..$ angle        : NULL
-    ##   ..$ lineheight   : NULL
-    ##   ..$ margin       : NULL
-    ##   ..$ debug        : NULL
-    ##   ..$ inherit.blank: logi TRUE
-    ##   ..- attr(*, "class")= chr [1:2] "element_text" "element"
-    ##  $ legend.title.position           : NULL
-    ##  $ legend.position                 : chr "right"
-    ##  $ legend.position.inside          : NULL
-    ##  $ legend.direction                : NULL
-    ##  $ legend.byrow                    : NULL
-    ##  $ legend.justification            : chr "center"
-    ##  $ legend.justification.top        : NULL
-    ##  $ legend.justification.bottom     : NULL
-    ##  $ legend.justification.left       : NULL
-    ##  $ legend.justification.right      : NULL
-    ##  $ legend.justification.inside     : NULL
-    ##  $ legend.location                 : NULL
-    ##  $ legend.box                      : NULL
-    ##  $ legend.box.just                 : NULL
-    ##  $ legend.box.margin               : 'margin' num [1:4] 0cm 0cm 0cm 0cm
-    ##   ..- attr(*, "unit")= int 1
-    ##  $ legend.box.background           : list()
-    ##   ..- attr(*, "class")= chr [1:2] "element_blank" "element"
-    ##  $ legend.box.spacing              : 'simpleUnit' num 11points
-    ##   ..- attr(*, "unit")= int 8
-    ##   [list output truncated]
-    ##  - attr(*, "class")= chr [1:2] "theme" "gg"
-    ##  - attr(*, "complete")= logi TRUE
-    ##  - attr(*, "validate")= logi TRUE
+    ## Warning: Removed 36 rows containing non-finite outside the scale range
+    ## (`stat_boxplot()`).
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
 
 The plot shows the rental prices across counties in 2023. There are
 differences in median rental prices and the speadness of prices among
@@ -753,28 +473,16 @@ to a results folder in your repository.**
 rental_allyear / rental_2023 
 ```
 
-    ## Warning: Removed 531 rows containing non-finite outside the scale range
-    ## (`stat_summary()`).
-
-    ## Warning: Removed 531 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
-
     ## Warning: Removed 36 rows containing non-finite outside the scale range
     ## (`stat_boxplot()`).
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-16-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-17-1.png)<!-- -->
 
 ``` r
 rental_plot = rental_allyear + rental_2023 + plot_layout(ncol = 2)
 
 ggsave("results/rental_combined.png", rental_plot, width = 12, height = 5, dpi = 300)
 ```
-
-    ## Warning: Removed 531 rows containing non-finite outside the scale range
-    ## (`stat_summary()`).
-
-    ## Warning: Removed 531 rows containing missing values or values outside the scale range
-    ## (`geom_line()`).
 
     ## Warning: Removed 36 rows containing non-finite outside the scale range
     ## (`stat_boxplot()`).
@@ -873,7 +581,7 @@ final_merged |>
   theme_minimal()
 ```
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-19-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-20-1.png)<!-- -->
 
 From the summarized table of the number of men and women in each
 education category, both sex with more than high school education
@@ -916,7 +624,7 @@ total |>
 
     ## `geom_smooth()` using formula = 'y ~ x'
 
-![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-21-1.png)<!-- -->
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-22-1.png)<!-- -->
 
 The plot illustrates the relationship between total activity and age,
 separated by sex and education level. There is a declining trend in
@@ -937,14 +645,36 @@ in words any patterns or conclusions you can make based on this graph;
 including smooth trends may help identify differences.**
 
 ``` r
-merged = 
-final_merged |> 
+final_merged |>
   pivot_longer(
     cols = min1:min1440,
     names_to = "time",
     values_to = "activity"
-  ) |> 
+  ) |>
+  mutate(time = as.numeric(gsub("min", "", time))) |> 
   ggplot(aes(x = time, y = activity, color = sex)) +
-  geom_smooth(method = 'loess', se = FALSE) +
-  facet_grid(. ~ education) 
+  geom_smooth(se = FALSE, linewidth = 1) +
+  facet_grid(education ~ .) +
+  labs(
+    title = "24-hour Activity Pattern by Education Level and Sex",
+    x = "time (minutes)",
+    y = "Activity Level",
+    color = "Sex"
+  ) +
+  theme_minimal()
 ```
+
+![](p8105_hw3_rk3445_files/figure-gfm/unnamed-chunk-23-1.png)<!-- -->
+
+The plot displays the 24-hour activity level trends by education level
+and sex. Across all groups, activity levels are low during the early
+morning hours, rise sharply around mid-morning, and peak during daytime,
+followed by a steady decline in the evening and minimal activity
+overnight. Participants with more than high school education tend to
+show slightly higher and more consistent daytime activity, suggesting a
+structured daily routine. In contrast, those with less than high school
+education display greater variability throughout the day, with less
+pronounced peaks. The smooth trends also suggest that women tend to
+maintain slightly higher activity levels during daytime hours compared
+to men, particularly in the high school equivalent and more than high
+school groups.
